--- a/WebAppService/Areas/Admin/Views/Shared/_MoldunLeftSideBar.cshtml
+++ b/WebAppService/Areas/Admin/Views/Shared/_MoldunLeftSideBar.cshtml
@@ -57,7 +57,7 @@
                     </a>
                     <ul aria-expanded="false" class="collapse first-level">
                         <li class="sidebar-item">
-                            <a href="/Admin/Home/Index" class="sidebar-link">
+                            <a href="/Admin/Home/HomePage1" class="sidebar-link">
                                 <div class="round-16 d-flex align-items-center justify-content-center">
                                     <i class="ti ti-circle"></i>
                                 </div>
@@ -65,7 +65,7 @@
                             </a>
                         </li>
                         <li class="sidebar-item">
-                            <a href="/Admin/Home/Index" class="sidebar-link">
+                            <a href="/Admin/Home/HomePage2" class="sidebar-link">
                                 <div class="round-16 d-flex align-items-center justify-content-center">
                                     <i class="ti ti-circle"></i>
                                 </div>
@@ -73,11 +73,19 @@
                             </a>
                         </li>
                         <li class="sidebar-item">
-                            <a href="/Admin/Home/Index" class="sidebar-link">
+                            <a href="/Admin/DichVuDacBiet/DichVuDacBiet" class="sidebar-link">
                                 <div class="round-16 d-flex align-items-center justify-content-center">
                                     <i class="ti ti-circle"></i>
                                 </div>
                                 <span class="hide-menu">Dịch vụ đặc biệt</span>
+                            </a>
+                        </li>
+                        <li class="sidebar-item">
+                            <a href="/Admin/Video/Video" class="sidebar-link">
+                                <div class="round-16 d-flex align-items-center justify-content-center">
+                                    <i class="ti ti-circle"></i>
+                                </div>
+                                <span class="hide-menu">Video</span>
                             </a>
                         </li>
                     </ul>
