--- a/WebAppService/Areas/Admin/Views/Shared/_ViewAdmin.cshtml
+++ b/WebAppService/Areas/Admin/Views/Shared/_ViewAdmin.cshtml
@@ -42,19 +42,6 @@
 				  document.documentElement.setAttribute("data-color-theme", e);
 				}
 			</script>
-			<button class="btn btn-primary p-3 rounded-circle d-flex align-items-center justify-content-center customizer-btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-				<i class="icon ti ti-phone fs-7"></i>
-			</button>
-
-			<div class="offcanvas customizer offcanvas-end" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
-				<div class="d-flex align-items-center justify-content-between p-3 border-bottom">
-					<h4 class="offcanvas-title fw-semibold" id="offcanvasExampleLabel">
-						Hỗ trợ
-					</h4>
-					<button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-				</div>
-
-			</div>
 		</div>
 
 		<!--  Search Bar -->
@@ -96,6 +83,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/7.0.5/signalr.min.js"></script>
 	<script src="~/assets/plug/mustache.js"></script>
 	<script src="~/assets/js/plugins/toastr-init.js"></script>
+	<script src="~/ajax/webappservice.realtimenotify.js"></script>
 	<script src="~/ajax/webappservice.settings.js"></script>
 	<script src="~/assets/plug/chosen/chosen.jquery.js"></script>
 	<script>
