--- a/WebAppService/Areas/Admin/Views/DichVu/DichVu.cshtml
+++ b/WebAppService/Areas/Admin/Views/DichVu/DichVu.cshtml
@@ -96,21 +96,21 @@
                 })
             },
 
-            LoadDetail: function (idBaiViet) {
-                if (idBaiViet != "") {
+            LoadDetail: function (idDichVu) {
+                if (idDichVu != "") {
                     $.ajax({
                         url: '/Admin/DichVu/LoadDetail',
                         type: "GET",
                         dataType: "json",
                         data: {
-                            IdBaiViet: idBaiViet,
+                            IdDichVu: idDichVu,
                         },
                         success: function (response) {
                             if (response.status == true) {
                                 var lstData = response.lstData;
 
                                 if (lstData != null) {
-                                    $("#IdBaiViet").val(lstData.idBaiViet);
+                                    $("#IdDichVu").val(lstData.idDichVu);
                                     $("#TieuDeBaiViet").val(lstData.tieuDeBaiViet);
                                     $("#MoTaNgan").val(lstData.moTaNgan);
                                     $("#IsCongKhai").prop("checked",lstData.isCongKhai);
@@ -146,7 +146,7 @@
             },
 
             ResetForm: function () {
-                $("#IdBaiViet").val(0);
+                $("#IdDichVu").val(0);
                 $("#TieuDeBaiViet").val("");
                 $("#MoTaNgan").val("");
                 $("#CbNhomBaiViet").val("").trigger('chosen:updated');
@@ -158,7 +158,7 @@
             },
 
             SaveData:function () {
-                var IdBaiViet = $("#IdBaiViet").val();
+                var IdDichVu = $("#IdDichVu").val();
                 var TieuDeBaiViet = $("#TieuDeBaiViet").val();
                 var MoTaNgan = $("#MoTaNgan").val();
                 var CbNhomBaiViet = $("#CbNhomBaiViet").val();
@@ -174,7 +174,7 @@
                 }
 
                  var objdata = {
-                    IdBaiViet: IdBaiViet != 0 ? IdBaiViet : '00000000-0000-0000-0000-000000000000',
+                    IdDichVu: IdDichVu != 0 ? IdDichVu : '00000000-0000-0000-0000-000000000000',
                     TieuDeBaiViet: TieuDeBaiViet,
                     MoTaNgan: MoTaNgan,
                     CbNhomBaiViet: CbNhomBaiViet,
@@ -237,8 +237,8 @@
                 }
             },
 
-           DeleteData: function (idBaiViet) {
-            if (idBaiViet != "") {
+           DeleteData: function (idDichVu) {
+            if (idDichVu != "") {
                 const swalWithBootstrapButtons = Swal.mixin({
                     customClass: {
                         confirmButton: "btn bg-secondary-subtle text-secondary",
@@ -262,7 +262,7 @@
                                 type: "POST",
                                 url: "/Admin/DichVu/DeleteData",
                                 data: {
-                                    idBaiViet: idBaiViet,
+                                    IdDichVu: idDichVu,
                                 },
                                 success: function (response) {
                                     if (response.status == true) {
@@ -336,8 +336,8 @@
         function fm_editData(e, value, row, index) {
             return [
                 '<div style="width: 100%">',
-                '<a href="javascript:myScripts.LoadDetail('+ "'" + value.idBaiViet + "'" + ')" class="hvr-shrink me-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Sửa dữ liệu"><iconify-icon icon="solar:gallery-edit-line-duotone" class="text-primary" width="23px" height="23px"></iconify-icon></a>' +
-                '<a href="javascript:myScripts.DeleteData(' + "'" + value.idBaiViet + "'" + ')" class="hvr-shrink" data-bs-toggle="tooltip" title="Xóa dữ liệu"><iconify-icon icon="solar:trash-bin-trash-outline" class="text-danger" width="25px" height="25px"></iconify-icon></a>' +
+                '<a href="javascript:myScripts.LoadDetail('+ "'" + value.idDichVu + "'" + ')" class="hvr-shrink me-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Sửa dữ liệu"><iconify-icon icon="solar:gallery-edit-line-duotone" class="text-primary" width="23px" height="23px"></iconify-icon></a>' +
+                '<a href="javascript:myScripts.DeleteData(' + "'" + value.idDichVu + "'" + ')" class="hvr-shrink" data-bs-toggle="tooltip" title="Xóa dữ liệu"><iconify-icon icon="solar:trash-bin-trash-outline" class="text-danger" width="25px" height="25px"></iconify-icon></a>' +
                 '</div>'
             ].join('');
         };
@@ -388,7 +388,7 @@
                                 <th data-field="urlImage" data-width="8" data-formatter="fm_Image" data-sortable="true">Ảnh</th>
                                 <th data-field="tieuDeBaiViet" data-sortable="true">Tên tiêu đề</th>
                                 <th data-field="moTaNgan" data-sortable="true">Mô tả ngắn</th>
-                                <th data-field="isBaiVietNoiBat" data-width="8" data-formatter="fm_editBVNB" data-sortable="true">Nổi bật</th>
+                                @* <th data-field="isBaiVietNoiBat" data-width="8" data-formatter="fm_editBVNB" data-sortable="true">Nổi bật</th> *@
                                 <th data-field="isCongKhai" data-width="8" data-formatter="fm_editBVCK" data-sortable="true">Công khai</th>
                             </tr>
                         </thead>
@@ -415,7 +415,7 @@
                             <div class="card-body p-3">
                                 <div class="form-group">
                                     <div class="row">
-                                        <input type="hidden" id="IdBaiViet" name="name" value="" />
+                                        <input type="hidden" id="IdDichVu" name="name" value="" />
                                         <div class="col-sm-3 d-flex align-items-stretch" style="height: max-content;">
                                             <div class="card w-100 border position-relative overflow-hidden">
                                                 <div class="card-body p-2">
@@ -436,32 +436,28 @@
                                                 <label class="fs-2 form-label m-0">Tên tiêu đề:<font class="text-danger">*</font> </label>
                                                 <input type="text" class="form-control" placeholder="Nhập tiêu đề ..." id="TieuDeBaiViet" value="">
                                             </div>
-                                             <div class="col-sm-3 mb-2"></div>
-                                                <label class="form-label">Sắp xếp:</label>
-                                                <input type="number" id="SapXep" class="form-control" placeholder="1,2,3...">
-                                            </div>
-                                            <div class="col-sm-3 mb-2">
+                                            <div class="col-sm-6 mb-2" hidden>
                                                 <label class="form-label">Nhóm bài viết:</label>
                                                 <select data-placeholder="Choose a Country..." class="form-control chosen-select" id="CbNhomBaiViet" tabindex="2">
                                                     <option value="">--Chọn nhóm bài viết--</option>
                                                 </select>
                                             </div>
-                                            <div class="col-sm-3 mb-2">
+                                            <div class="col-sm-6 mb-2" hidden>
                                                 <label class="form-label">Loại danh mục:</label>
-                                                <select data-placeholder="Choose a Country..." class="form-control chosen-select" id="cbLoaiBaiDang" tabindex="2">
+                                                <select data-placeholder="Choose a Country..." class="form-control chosen-select" id="CbLoaiBaiDang" tabindex="2">
                                                     <option value="">--Chọn danh mục--</option>
                                                 </select>
                                             </div>
-                                           <div class="col-sm-3 mb-2">
-                                                <label class="fs-2 form-label m-0">Tiêu đề loại danh mục(nếu có):</label>
+                                            <div class="col-sm-12 mb-2" hidden>
+                                                <label class="form-label">Tiêu đề loại danh mục(nếu có):</label>
                                                 <input type="text" class="form-control" placeholder="" id="TieuDeNgan" value="">
                                             </div>
                                             <div class="col-sm-12 mb-2">
                                                 <label class="fs-2 form-label m-0">Mô tả:</label>
-                                                <textarea type="text" class="form-control" placeholder="Mô tả ..." rows="5" id="MoTaNgan" value=""></textarea>
+                                                <textarea type="text" class="form-control" placeholder="Mô tả ..." rows="10" id="MoTaNgan" value=""></textarea>
                                             </div>
                                             <div class="mb-2 row">
-                                                <div class=" col-sm-3">
+                                                <div class=" col-sm-3" hidden>
                                                     <input class="form-check-input" type="checkbox" value="" id="IsBaiVietNoiBat">
                                                     <label class="form-check-label" for="IsBaiVietNoiBat">
                                                         Bài viết nổi bật
