--- a/WebAppService/Views/Doctor/ListDoctor.cshtml
+++ b/WebAppService/Views/Doctor/ListDoctor.cshtml
@@ -103,18 +103,21 @@
     <div class="pagination-area mt-30 mb-30">
         <nav aria-label="Page navigation example">
             <ul class="pagination justify-content-center" id="pagination">
+
             </ul>
         </nav>
     </div>
 </div>
 <script id="news-template" type="text/x-dot-template">
     {{ for(var i = 0; i < it.newsList.length; i++) { }}
+
+     
           <div class="doctor-card">
             <img src="{{=it.newsList[i].urlImage}}" alt="Ảnh bác sĩ" width="308px" />
             <h3>{{=it.newsList[i].hoTen}}</h3>
             <p><i class="fas fa-graduation-cap"></i> {{=it.newsList[i].chucDanh}}</p>
             <p><i class="fas fa-house-medical"></i> {{=it.newsList[i].donViKhoa}}</p>
-            <button class="btn-detail">Chi tiết</button>
+            <button class="btn-detail" 	onclick="window.location.href = '/Doctor/DoctorDetail/{{=it.newsList[i].idNhanSu}}'">Chi tiết</button>
         </div>
     {{ } }}
 </script>
